# loan-projection

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  loan.py  pyproject.toml  requirements-test.txt  tests.sh
.github/actions/prepare-test-environment/: action.yml
.github/workflows/: coverage.yml  mypy.yml  pylint.yml  pyright.yml  ruff-format.yml  ruff-lint.yml  tests.yml
tests/: test_loan.py  test_loan_errors.py  test_print_loan_projection.py
