[project]
name = "loan-projection"
requires-python = ">=3.10"
version = "1.0.0"
authors = [
  {name = "Edward Mitchell"}
]

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "D",   # pydocstyle
  "E",   # pycodestyle
  "W",   # pycodestyle
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "S",   # flake8-bandit
  "I",   # isort
]
ignore = ["D203", "D213", "D105"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/test_*.py" = [
    "S101",  # Allow assert in tests.
    "ARG",   # Allow unused arguments in tests (fixtures).
    "D103",  # Do not require docstrings in tests.
    "W291"   # Allow trailing whitespace in tests.
]

[tool.mypy]
files = ["."]
